--- a/honey/src/styles/Navbar.css
+++ b/honey/src/styles/Navbar.css
@@ -7,6 +7,7 @@ body {
     min-height: 100vh;
     background-color: lineargradient(90deg, #f5f5f5, #f5f5f5);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    overflow: hidden;
 }
 
 nav {
@@ -108,5 +109,9 @@ nav li:first-child {
 @media(max-width: 400px) {
     .sidebar {
         width: 100%;
+        
+    }
+    nav a:hover {
+        transform: translateX(25px) scale(1.2);
     }
 }
