--- a/honey/src/styles/Contact.css
+++ b/honey/src/styles/Contact.css
@@ -1,4 +1,4 @@
 .custom-hr {
-    border: none; /* Usuwa domyślne podkreślenie */
-    height: 1px; /* Ustawia wysokość hr */
+    border: none;
+    height: 1px;
   }
