--- a/honey/src/styles/Navbar.css
+++ b/honey/src/styles/Navbar.css
@@ -5,7 +5,7 @@
 
 body {
     min-height: 100vh;
-    background-color: lineargradient(90deg, #f5f5f5, #f5f5f5);
+    background-color: #f7f7f7;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     overflow: hidden;
 }
